--- a/exercícios9.html
+++ b/exercícios9.html
@@ -34,7 +34,7 @@
             width: 100px;
             padding: 8px;
             box-sizing: border-box;
-            border: 1px solid #cccc;
+            border: 5px solid bl;
             border-radius: 4px;
         }
         form input:focus {
